--- a/portfolio.html
+++ b/portfolio.html
@@ -116,7 +116,7 @@
                     />
                     <source
                       srcset="
-                        ./images/desk/portfolio-1-370.jpg     1x,
+                        ./images/desk/portfolio-1-370.jpg    1x,
                         ./images/desk/portfolio-1-370@2x.jpg 2x
                       "
                       media="(min-width:1200px)"
@@ -163,7 +163,7 @@
                     />
                     <source
                       srcset="
-                        ./images/desk/portfolio-2-370.jpg     1x,
+                        ./images/desk/portfolio-2-370.jpg    1x,
                         ./images/desk/portfolio-2-370@2x.jpg 2x
                       "
                       media="(min-width:1200px)"
@@ -212,7 +212,7 @@
                     />
                     <source
                       srcset="
-                        ./images/desk/portfolio-3-370.jpg     1x,
+                        ./images/desk/portfolio-3-370.jpg    1x,
                         ./images/desk/portfolio-3-370@2x.jpg 2x
                       "
                       media="(min-width:1200px)"
@@ -259,7 +259,7 @@
                     />
                     <source
                       srcset="
-                        ./images/desk/portfolio-4-370.jpg     1x,
+                        ./images/desk/portfolio-4-370.jpg    1x,
                         ./images/desk/portfolio-4-370@2x.jpg 2x
                       "
                       media="(min-width:1200px)"
@@ -306,7 +306,7 @@
                     />
                     <source
                       srcset="
-                        ./images/desk/portfolio-5-370.jpg     1x,
+                        ./images/desk/portfolio-5-370.jpg    1x,
                         ./images/desk/portfolio-5-370@2x.jpg 2x
                       "
                       media="(min-width:1200px)"
@@ -353,7 +353,7 @@
                     />
                     <source
                       srcset="
-                        ./images/desk/portfolio-6-370.jpg     1x,
+                        ./images/desk/portfolio-6-370.jpg    1x,
                         ./images/desk/portfolio-6-370@2x.jpg 2x
                       "
                       media="(min-width:1200px)"
@@ -402,7 +402,7 @@
                     />
                     <source
                       srcset="
-                        ./images/desk/portfolio-7-370.jpg     1x,
+                        ./images/desk/portfolio-7-370.jpg    1x,
                         ./images/desk/portfolio-7-370@2x.jpg 2x
                       "
                       media="(min-width:1200px)"
@@ -451,7 +451,7 @@
                     />
                     <source
                       srcset="
-                        ./images/desk/portfolio-8-370.jpg     1x,
+                        ./images/desk/portfolio-8-370.jpg    1x,
                         ./images/desk/portfolio-8-370@2x.jpg 2x
                       "
                       media="(min-width:1200px)"
@@ -498,7 +498,7 @@
                     />
                     <source
                       srcset="
-                        ./images/desk/portfolio-9-370.jpg     1x,
+                        ./images/desk/portfolio-9-370.jpg    1x,
                         ./images/desk/portfolio-9-370@2x.jpg 2x
                       "
                       media="(min-width:1200px)"
@@ -530,7 +530,7 @@
     </main>
 
     <!-- Футер -->
-  <footer class="footer">
+    <footer class="footer">
       <div class="container container__footer">
         <div class="footer__contacts">
           <a href="/" class="logo footer--logo">
@@ -618,10 +618,10 @@
         </div>
       </div>
     </footer>
-
+    <!--  Modal mobile contacts -->
     <div class="backdrop_mobile is-hidden" mobile-modal>
       <div class="modal_mobile">
-        <button class=" modal__close-button--mb" data-close>
+        <button class="modal__close-button--mb" data-close>
           <svg class="modal__close-icon--mb" width="30" height="30">
             <use href="./images/icons/symbol-defs.svg#icon-close-1"></use>
           </svg>
@@ -629,40 +629,59 @@
 
         <ul class="modal_menu">
           <li class="modal__item">
-            <a href="" class="modal__link">Студия </a>
+            <a href="./index.html" class="modal__link">Студия </a>
           </li>
           <li class="modal__item">
-            <a href="" class="modal__link">Портфолио</a>
-          </li>
-          <li class="modal__item contacts">
-            <a href="" class="modal__link"> Контакты</a>
+            <a href="./portfolio.html" class="modal__link">Портфолио</a>
           </li>
           <li class="modal__item">
-            <a href="tel:+380961111111" class="modal__link modal__phone">
-              +38 096 111 11 11
-            </a>
-          </li>
-          <li class="modal__item item-email">
-            <a href="" class="modal__link modal__email"> info@devstudio.com </a>
+            <a href="" class="modal__link">Контакты</a>
           </li>
         </ul>
-        <ul class="modal__soc-list">
-          <li class="modal__soc-item">
-            <a href=" " class="modal__soc-link">Instagram<span class="modal__partition" > | </span></a>
-          </li>
-           <ul class="modal__soc-list">
-          <li class="modal__soc-item">
-            <a href=" " class="modal__soc-link"> Twitter<span class="modal__partition" > | </span></a>
-          </li>
-           <ul class="modal__soc-list">
-          <li class="modal__soc-item">
-            <a href=" " class="modal__soc-link"> Facebook<span class="modal__partition" > | </span></a>
-          </li>
-           <ul class="modal__soc-list">
-          <li class="modal__soc-item">
-            <a href=" " class="modal__soc-link">Linkedin</a>
-          </li>
-        </ul>
+        <div class="modal--wrap">
+          <ul class="modal-contacts-mb">
+            <li class="modal-contacts-mb__item modal-contacts-mb__item--phone">
+              <a
+                href="tel:+380961111111"
+                class="modal-contacts-mb__link modal-contacts-mb__link--phone"
+              >
+                +38 096 111 11 11
+              </a>
+            </li>
+            <li class="modal-contacts-mb__item modal-contacts-mb__item--email">
+              <a
+                href=""
+                class="modal-contacts-mb__link modal-contacts-mb__link--email"
+              >
+                info@devstudio.com
+              </a>
+            </li>
+          </ul>
+
+          <ul class="modal__soc-list">
+            <li class="modal__soc-item">
+              <a href=" " class="modal__soc-link"
+                >Instagram<span class="modal__partition"> | </span></a
+              >
+            </li>
+
+            <li class="modal__soc-item">
+              <a href=" " class="modal__soc-link">
+                Twitter<span class="modal__partition"> | </span></a
+              >
+            </li>
+
+            <li class="modal__soc-item">
+              <a href=" " class="modal__soc-link">
+                Facebook<span class="modal__partition"> | </span></a
+              >
+            </li>
+
+            <li class="modal__soc-item">
+              <a href=" " class="modal__soc-link">Linkedin</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
     <script src="./js/modal _mobile.js"></script>
