--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                   <source
                     srcset="
                       ./images/tab/portfolio-9-354.jpg   1x,
-                      /images/tab/portfolio-9-354@2x.jpg 2x
+                      ./images/tab/portfolio-9-354@2x.jpg 2x
                     "
                     media="(max-width:1199px)"
                   />
@@ -229,7 +229,7 @@
                 <source
                   srcset="
                     ./images/tab/team-1-354.jpg   1x,
-                    /images/tab/team-1-354@2x.jpg 2x
+                    ./images/tab/team-1-354@2x.jpg 2x
                   "
                   media="(max-width:1199px)"
                 />
@@ -299,7 +299,7 @@
                 <source
                   srcset="
                     ./images/tab/team-2-354.jpg   1x,
-                    /images/tab/team-2-354@2x.jpg 2x
+                    ./images/tab/team-2-354@2x.jpg 2x
                   "
                   media="(max-width:1199px)"
                 />
@@ -369,7 +369,7 @@
                 <source
                   srcset="
                     ./images/tab/team-3-354.jpg   1x,
-                    /images/tab/team-3-354@2x.jpg 2x
+                    ./images/tab/team-3-354@2x.jpg 2x
                   "
                   media="(max-width:1199px)"
                 />
@@ -439,7 +439,7 @@
                 <source
                   srcset="
                     ./images/tab/team-4-354.jpg   1x,
-                    /images/tab/team-4-354@2x.jpg 2x
+                    ./images/tab/team-4-354@2x.jpg 2x
                   "
                   media="(max-width:1199px)"
                 />
