--- a/portfolio.html
+++ b/portfolio.html
@@ -109,8 +109,8 @@
 
                     <source
                       srcset="
-                        ./images/tab/portfolio-1-354.jpg   1x,
-                        /images/tab/portfolio-1-354@2x.jpg 2x
+                        ./images/tab/portfolio-1-354.jpg    1x,
+                        ./images/tab/portfolio-1-354@2x.jpg 2x
                       "
                       media="(max-width:1199px)"
                     />
@@ -156,8 +156,8 @@
 
                     <source
                       srcset="
-                        ./images/tab/portfolio-2-354.jpg   1x,
-                        /images/tab/portfolio-2-354@2x.jpg 2x
+                        ./images/tab/portfolio-2-354.jpg    1x,
+                        ./images/tab/portfolio-2-354@2x.jpg 2x
                       "
                       media="(max-width:1199px)"
                     />
@@ -205,8 +205,8 @@
 
                     <source
                       srcset="
-                        ./images/tab/portfolio-3-354.jpg   1x,
-                        /images/tab/portfolio-3-354@2x.jpg 2x
+                        ./images/tab/portfolio-3-354.jpg    1x,
+                        ./images/tab/portfolio-3-354@2x.jpg 2x
                       "
                       media="(max-width:1199px)"
                     />
@@ -252,8 +252,8 @@
 
                     <source
                       srcset="
-                        ./images/tab/portfolio-4-354.jpg   1x,
-                        /images/tab/portfolio-4-354@2x.jpg 2x
+                        ./images/tab/portfolio-4-354.jpg    1x,
+                        ./images/tab/portfolio-4-354@2x.jpg 2x
                       "
                       media="(max-width:1199px)"
                     />
@@ -299,8 +299,8 @@
 
                     <source
                       srcset="
-                        ./images/tab/portfolio-5-354.jpg   1x,
-                        /images/tab/portfolio-5-354@2x.jpg 2x
+                        ./images/tab/portfolio-5-354.jpg    1x,
+                        ./images/tab/portfolio-5-354@2x.jpg 2x
                       "
                       media="(max-width:1199px)"
                     />
@@ -346,8 +346,8 @@
 
                     <source
                       srcset="
-                        ./images/tab/portfolio-6-354.jpg   1x,
-                        /images/tab/portfolio-6-354@2x.jpg 2x
+                        ./images/tab/portfolio-6-354.jpg    1x,
+                        ./images/tab/portfolio-6-354@2x.jpg 2x
                       "
                       media="(max-width:1199px)"
                     />
@@ -395,8 +395,8 @@
 
                     <source
                       srcset="
-                        ./images/tab/portfolio-7-354.jpg   1x,
-                        /images/tab/portfolio-7-354@2x.jpg 2x
+                        ./images/tab/portfolio-7-354.jpg    1x,
+                        ./images/tab/portfolio-7-354@2x.jpg 2x
                       "
                       media="(max-width:1199px)"
                     />
@@ -444,8 +444,8 @@
 
                     <source
                       srcset="
-                        ./images/tab/portfolio-8-354.jpg   1x,
-                        /images/tab/portfolio-8-354@2x.jpg 2x
+                        ./images/tab/portfolio-8-354.jpg    1x,
+                        ./images/tab/portfolio-8-354@2x.jpg 2x
                       "
                       media="(max-width:1199px)"
                     />
@@ -491,8 +491,8 @@
 
                     <source
                       srcset="
-                        ./images/tab/portfolio-9-354.jpg   1x,
-                        /images/tab/portfolio-9-354@2x.jpg 2x
+                        ./images/tab/portfolio-9-354.jpg    1x,
+                        ./images/tab/portfolio-9-354@2x.jpg 2x
                       "
                       media="(max-width:1199px)"
                     />
