--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
             <span class="logo__first-part">Web</span>Studio
           </a>
 
-          <!---------------- mobile-modal-button_------------------------------------------------------>
+          <!-- mobile-modal-button_ -->
 
           <ul class="menu">
             <li class="menu__item">
@@ -623,7 +623,7 @@
       <div class="modal_mobile">
         <button class="modal__close-button--mb" data-close>
           <svg class="modal__close-icon--mb" width="30" height="30">
-            <use href="./images/icons/symbol-defs.svg#icon-close-1"></use>
+            <use href="./images/icons/symbol-defs.svg#icon-close-2"></use>
           </svg>
         </button>
 
@@ -632,7 +632,9 @@
             <a href="./index.html" class="modal__link">Студия </a>
           </li>
           <li class="modal__item">
-            <a href="./portfolio.html" class="modal__link">Портфолио</a>
+            <a href="./portfolio.html" class="modal__link modal__link--current"
+              >Портфолио</a
+            >
           </li>
           <li class="modal__item">
             <a href="" class="modal__link">Контакты</a>
