--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
           </a>
           <ul class="menu">
             <li class="menu__item">
-              <a class="menu__link menu__link--current"" href="./index.html">Студия</a>
+              <a class="menu__link menu__link--current" href="./index.html"
+                >Студия</a
+              >
             </li>
             <li class="menu__item">
-              <a class="menu__link menu__link" href="./portfolio.html"
-                >Портфолио</a
+              <a class="menu__link menu__link" href="./portfolio.html">
+                Портфолио</a
               >
             </li>
             <li class="menu__item">
@@ -56,10 +58,11 @@
             </a>
           </li>
         </ul>
- <!---------------- mobile-modal-button_------------------------------------------------------>
+
+        <!--  mobile-modal-button-->
 
         <button class="nav__button" type="button" data-open>
-          <svg class="nav__icon" width="40" height="40" aria-label="меню">
+          <svg class="nav__icon" width="40" height="40" aria-label="menu">
             <use href="./images/icons/icons.svg#icon-menu_burger"></use>
           </svg>
         </button>
@@ -81,7 +84,7 @@
 
       <section class="features">
         <div class="container">
-          <h2 class="features__title text-hide">Особливості</h2> 
+          <h2 class="features__title text-hide">Особливості</h2>
           <ul class="features__list">
             <li class="features__item">
               <div class="features__box">
@@ -148,29 +151,15 @@
                 <picture>
                   <source
                     srcset="
-                      ./images/mobile/portfolio-9-450.jpg    1x,
-                      ./images/mobile/portfolio-9-450@2x.jpg 2x
-                    "
-                    media="(max-width:768px)"
-                  />
-                  <source
-                    srcset="
-                      ./images/tab/portfolio-9-354.jpg   1x,
-                      ./images/tab/portfolio-9-354@2x.jpg 2x
-                    "
-                    media="(max-width:1199px)"
-                  />
-                  <source
-                    srcset="
-                      ./images/desk/portfolio-9-370.jpg    1x,
-                      ./images/desk/portfolio-9-370@2x.jpg 2x
+                      ./images/desk/wwd-1-370.jpg    1x,
+                      ./images/desk/wwd-1-370@2x.jpg 2x
                     "
                     media="(min-width:1200px)"
                   />
 
                   <img
-                    src="./images/mobile/portfolio-9-450.jpg"
-                    alt="Технокряк"
+                    src="./images/desk/wwd-1-370.jpg"
+                    alt="Десктопные приложения"
                   />
                 </picture>
                 <div class="what-we-do__box-title">
@@ -182,12 +171,20 @@
             </li>
             <li class="what-we-do__item">
               <div class="what-we-do__wrapper">
-                <img
-                  class="what-we-do__img"
-                  src="./images/box-2.jpg"
-                  alt="mobile"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/desk/wwd-2-370.jpg    1x,
+                      ./images/desk/wwd-2-370@2x.jpg 2x
+                    "
+                    media="(min-width:1200px)"
+                  />
+
+                  <img
+                    src="./images/desk/wwd-2-370.jpg"
+                    alt="Мобильные приложения"
+                  />
+                </picture>
                 <div class="what-we-do__box-title">
                   <h3 class="what-we-do__nested-title">Мобильные приложения</h3>
                 </div>
@@ -195,12 +192,20 @@
             </li>
             <li class="what-we-do__item">
               <div class="what-we-do__wrapper">
-                <img
-                  class="what-we-do__img"
-                  src="./images/box-3.jpg"
-                  alt="tablet"
-                  width="370"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/desk/wwd-3-370.jpg    1x,
+                      ./images/desk/wwd-3-370@2x.jpg 2x
+                    "
+                    media="(min-width:1200px)"
+                  />
+
+                  <img
+                    src="./images/desk/wwd-3-370.jpg"
+                    alt="Дизайнерские решения"
+                  />
+                </picture>
                 <div class="what-we-do__box-title">
                   <h3 class="what-we-do__nested-title">Дизайнерские решения</h3>
                 </div>
@@ -228,7 +233,7 @@
 
                 <source
                   srcset="
-                    ./images/tab/team-1-354.jpg   1x,
+                    ./images/tab/team-1-354.jpg    1x,
                     ./images/tab/team-1-354@2x.jpg 2x
                   "
                   media="(max-width:1199px)"
@@ -298,7 +303,7 @@
 
                 <source
                   srcset="
-                    ./images/tab/team-2-354.jpg   1x,
+                    ./images/tab/team-2-354.jpg    1x,
                     ./images/tab/team-2-354@2x.jpg 2x
                   "
                   media="(max-width:1199px)"
@@ -368,7 +373,7 @@
 
                 <source
                   srcset="
-                    ./images/tab/team-3-354.jpg   1x,
+                    ./images/tab/team-3-354.jpg    1x,
                     ./images/tab/team-3-354@2x.jpg 2x
                   "
                   media="(max-width:1199px)"
@@ -438,7 +443,7 @@
 
                 <source
                   srcset="
-                    ./images/tab/team-4-354.jpg   1x,
+                    ./images/tab/team-4-354.jpg    1x,
                     ./images/tab/team-4-354@2x.jpg 2x
                   "
                   media="(max-width:1199px)"
@@ -732,19 +737,21 @@
       </div>
     </div>
 
-<!--  Modal mobile contacts -->
+    <!--  Modal mobile contacts -->
 
-  <div class="backdrop_mobile is-hidden" mobile-modal>
+    <div class="backdrop_mobile is-hidden" mobile-modal>
       <div class="modal_mobile">
         <button class="modal__close-button--mb" data-close>
           <svg class="modal__close-icon--mb" width="30" height="30">
-            <use href="./images/icons/symbol-defs.svg#icon-close-1"></use>
+            <use href="./images/icons/symbol-defs.svg#icon-close-2"></use>
           </svg>
         </button>
 
         <ul class="modal_menu">
           <li class="modal__item">
-            <a href="./index.html" class="modal__link">Студия </a>
+            <a href="./index.html" class="modal__link modal__link--current"
+              >Студия
+            </a>
           </li>
           <li class="modal__item">
             <a href="./portfolio.html" class="modal__link">Портфолио</a>
